Fix build against Qt > 6.5.3

Our time validator uses a copy of QDateTimeParser

That relies on startsWithLocalTimeZone() being exported by something else in Qt, but with Qt > 6.5.3 that's no longer the case

Instead QTimezoneParser has its own version with slightly changed API

Copy a bit more Qt code to make ours build

BUG: 473507